xee-xpath-outer/tests/snapshots/xpath__inline_function_with_args_placeholdered2.snap
---
source: xee-xpath/tests/xpath.rs
expression: "run(\"function($x, $y) { $x - $y } ( ?, 3 ) (?) (5)\")"
---
Ok(
    Sequence {
        stack_value: One(
            Atomic(
                Integer(
                    Integer,
                    2,
                ),
            ),
        ),
    },
)
