xee-xpath-outer/tests/snapshots/xpath__inline_function_with_single_arg.snap
---
source: xee-xpath/tests/xpath.rs
expression: "run(\"function($x) { $x + 5 } (3)\")"
---
Ok(
    Sequence {
        stack_value: One(
            Atomic(
                Integer(
                    Integer,
                    8,
                ),
            ),
        ),
    },
)
