xee-xpath-outer/tests/snapshots/xpath__instance_of_one.snap
---
source: xee-xpath/tests/xpath.rs
expression: "run(\"1 instance of xs:integer\")"
---
Ok(
    Sequence {
        stack_value: One(
            Atomic(
                Boolean(
                    true,
                ),
            ),
        ),
    },
)
