xee-xpath-outer/tests/snapshots/xpath__let_nested.snap
---
source: xee-xpath/tests/xpath.rs
expression: "run(\"let $x := 1, $y := $x + 3 return $y + 5\")"
---
Ok(
    Sequence {
        stack_value: One(
            Atomic(
                Integer(
                    Integer,
                    9,
                ),
            ),
        ),
    },
)
