xee-xpath-outer/tests/snapshots/xpath__let_on_right_side.snap
---
source: xee-xpath/tests/xpath.rs
expression: "run(\"1 + (let $x := 2 return $x + 10)\")"
---
Ok(
    Sequence {
        stack_value: One(
            Atomic(
                Integer(
                    Integer,
                    13,
                ),
            ),
        ),
    },
)
