xee-xpath-outer/tests/snapshots/xpath__local_name_element.snap
---
source: xee-xpath/tests/xpath.rs
expression: "run_xml(r#\"<doc><a/><b><c/></b></doc>\"#, \"descendant::* / fn:local-name()\")"
---
Ok(
    Sequence {
        stack_value: Many(
            [
                Atomic(
                    String(
                        String,
                        "doc",
                    ),
                ),
                Atomic(
                    String(
                        String,
                        "a",
                    ),
                ),
                Atomic(
                    String(
                        String,
                        "b",
                    ),
                ),
                Atomic(
                    String(
                        String,
                        "c",
                    ),
                ),
            ],
        ),
    },
)
