xee-xpath-outer/tests/snapshots/xpath__named_function_ref_call.snap
---
source: xee-xpath/tests/xpath.rs
expression: "run(\"my_function#2(5, 2)\")"
---
Ok(
    Sequence {
        stack_value: One(
            Atomic(
                Integer(
                    Integer,
                    7,
                ),
            ),
        ),
    },
)
