xee-xpath-outer/tests/snapshots/xpath__negative_result_when_adding_day_time_durations.snap
---
source: xee-xpath/tests/xpath.rs
expression: "run(\"(xs:date('0001-01-01Z') + xs:dayTimeDuration('-P11DT02H02M')) cast as xs:string\")"
---
Ok(
    Sequence {
        stack_value: One(
            Atomic(
                String(
                    String,
                    "0000-12-20Z",
                ),
            ),
        ),
    },
)
