xee-xpath-outer/tests/snapshots/xpath__nested_some_quantifier_expr_true.snap
---
source: xee-xpath/tests/xpath.rs
expression: "run(\"some $x in (1, 2, 3), $y in (2, 3) satisfies $x gt $y\")"
---
Ok(
    Sequence {
        stack_value: One(
            Atomic(
                Boolean(
                    true,
                ),
            ),
        ),
    },
)
