xee-xpath-outer/tests/snapshots/xpath__predicate.snap
---
source: xee-xpath/tests/xpath.rs
expression: "run(\"(1, 2, 3)[. ge 2]\")"
---
Ok(
    Sequence {
        stack_value: Many(
            [
                Atomic(
                    Integer(
                        Integer,
                        2,
                    ),
                ),
                Atomic(
                    Integer(
                        Integer,
                        3,
                    ),
                ),
            ],
        ),
    },
)
